implemented simple flex grid

--- a/scss/husky.scss
+++ b/scss/husky.scss
@@ -26,6 +26,7 @@
     "modules/core.scss",
     "modules/column-options.scss",
     "modules/grid.scss",
+    "modules/flex-grid.scss",
     "modules/form.scss",
     "modules/navigation.scss",
     "modules/dropdown.scss",
